# fff

./: CMakeLists.txt  cylinder2D.cpp  draft.ipynb  read_amira.py  read_binary_uv.cpp
include/: sz_compress_cp_preserve_2d.hpp  sz_compress_cp_preserve_sos_2p5d.hpp  sz_compress_cp_preserve_sos_2p5d_blocked.hpp  sz_compress_cp_preserve_sos_2p5d_blocked.tpp  sz_compression_utils.hpp  sz_cp_preserve_sos_2p5d_common.hpp  sz_cp_preserve_utils.hpp  sz_decompress_cp_preserve_2d.hpp  sz_decompress_cp_preserve_sos_2p5d.hpp  sz_def.hpp  sz_prediction.hpp  utils.hpp
src/: CMakeLists.txt  sz_compress_cp_preserve_2d_bilinear.cpp  sz_compress_cp_preserve_sos_2d.cpp  sz_compress_cp_preserve_sos_2p5d.cpp  sz_compress_cp_preserve_sos_2p5d_blocked.cpp  sz_decompress_cp_preserve_2d.cpp  sz_decompress_cp_preserve_sos_2p5d.cpp  sz_huffman.cpp
test/: cp_extraction_2d_sos.cpp  main2d.cpp  test.cpp
